k8s/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-prod
  namespace: odoo-prod
  labels:
    app: odoo-prod
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: esmos-odoo-prod
spec:
  type: LoadBalancer
  selector:
    app: odoo-prod
  ports:
  - name: http
    protocol: TCP
    port: 8069
    targetPort: 8069
  - name: longpoll
    protocol: TCP
    port: 8072
    targetPort: 8072
